modules/cli/src/test/resources/good/misc/globals/gdo/Do14.scr
module good.misc.globals.gdo.Do14;


global protocol Do14(role A, role B)
{
	choice at A
	{
		l1() from A to B;
		do Do14a(A, B);
	}
	or
	{
		l2() from A to B;
	}
	//l1() from A to B;  // Uncomment is bad
}

global protocol Do14a(role C, role D)
{
	do Do14(D, C);
}

