modules/cli/src/test/resources/bad/reach/globals/grecursion/Recursion07a.scr
module bad.reach.globals.grecursion.Recursion07a;


global protocol Recursion7a(role A, role B)
{
	rec X
	{
		choice at A
		{
			l1() from A to B;
		}
		or
		{
			l2() from A to B;
		}
		continue X;
		l3() from A to B;  // Uncomment bad
	}
	//l3() from A to B;  // Uncomment bad
}

